usb-creator (0.4.5) solydxk; urgency=low

  * Updated pt/fr translations

 -- Arjen Balfoort <arjenbalfoort@solydxk.com>  Thu, 08 Feb 2018 18:22:47 +0100

usb-creator (0.4.4) solydxk; urgency=low

  * Updated nl translation

 -- Arjen Balfoort <arjenbalfoort@solydxk.com>  Sun, 14 Jan 2018 11:46:32 +0100

usb-creator (0.4.3) solydxk; urgency=low

  * Updated translations

 -- Arjen Balfoort <arjenbalfoort@solydxk.com>  Sun, 24 Dec 2017 22:27:09 +0100

usb-creator (0.4.2) solydxk; urgency=low

  * GUI improvements
  * Fix MX not in Debian family

 -- Arjen Balfoort <arjenbalfoort@solydxk.com>  Thu, 14 Sep 2017 12:49:38 +0200

usb-creator (0.4.1) solydxk; urgency=low

  * Updated translations

 -- Arjen Balfoort <arjenbalfoort@solydxk.com>  Mon, 17 Jul 2017 16:16:58 +0200

usb-creator (0.4.0) solydxk; urgency=low

  * Remove xksudo

 -- Arjen Balfoort <arjenbalfoort@solydxk.com>  Mon, 24 Apr 2017 16:37:56 +0200

usb-creator (0.3.9) solydxk; urgency=low

  * Added desktop categories

 -- Arjen Balfoort <arjenbalfoort@solydxk.com>  Tue, 11 Apr 2017 12:49:52 +0200

usb-creator (0.3.8) solydxk; urgency=low

  * Include device notifier for Plasma 5

 -- Arjen Balfoort <arjenbalfoort@solydxk.com>  Thu, 30 Mar 2017 20:56:34 +0200

usb-creator (0.3.7) solydxk; urgency=low

  * Replacement for dummy package solydxk-usb-creator

 -- Arjen Balfoort <arjenbalfoort@solydxk.com>  Fri, 10 Mar 2017 15:29:18 +0100

usb-creator (0.3.6) solydxk; urgency=low

  * Implement xksudo

 -- Arjen Balfoort <arjenbalfoort@solydxk.com>  Tue, 07 Mar 2017 19:13:28 +0100

usb-creator (0.3.5) solydxk; urgency=low

  * Preserve environment variables

 -- Arjen Balfoort <arjenbalfoort@solydxk.com>  Thu, 02 Mar 2017 11:39:29 +0100

usb-creator (0.3.4) solydxk; urgency=low

  * Fix GUI anamoly in dark themes

 -- Arjen Balfoort <arjenbalfoort@solydxk.com>  Sat, 18 Feb 2017 15:50:23 +0100

usb-creator (0.3.3) solydxk; urgency=low

  * Keep first 4MiB unallocated on pen drive
