@@ -1,0 +1,5 @@
+<?xml version="1.0"?>
+<its:rules xmlns:its="http://www.w3.org/2005/11/its" version="1.0">
+  <its:translateRule selector="/policyconfig" translate="no"/>
+  <its:translateRule selector="//action/message | //action/description" translate="yes"/>
+</its:rules>
