@@ -19,7 +19,6 @@
 # 11 - Cannot guess distribution from ISO name
 
 
-GUISTART='/usr/lib/usb-creator/main.py'
 FILESDIR="/usr/share/usb-creator/files"
 
 # ================================================================
@@ -641,45 +640,7 @@ function trim() {
 
 if [ -z $1 ]; then
   # Without arguments: show GUI if available, else show help
-  if [ -e "$GUISTART" ]; then
-    APP="usb-creator"
-
-    PYTHON=$(which python3)
-    if [ "$PYTHON" == '' ]; then
-      echo "Cannot find python3 executable - exiting"
-      exit 0
-    fi
-
-    # Prepare for translations
-    # https://www.gnu.org/software/gettext/manual/html_node/Preparing-Shell-Scripts.html
-    . gettext.sh
-
-    TEXTDOMAIN=$APP
-    export TEXTDOMAIN
-    TEXTDOMAINDIR=/usr/share/locale
-    export TEXTDOMAINDIR
-
-    # Get translations
-    # Create pot: xgettext -o $APP.pot -L Shell --keyword=eval_gettext $APP
-    MSG_ADM=$(eval_gettext "needs administrative privileges.")
-    MSG_PWD=$(eval_gettext "Please enter your password.")
-    MSG="<b>$APP</b> $MSG_ADM $MSG_PWD"
-
-    optimize='OO'; case "$*" in *--debug*) unset optimize; esac
-    CMD="$PYTHON -tt${optimize} "$GUISTART" $@"
-    if [ -e "/usr/bin/kdesudo" ]; then
-      ICON=$(get-app-theme-icon "$APP" 2>/dev/null)
-      kdesudo -d -i "$ICON" --comment "$MSG" -c "$CMD"
-    elif [ -e "/usr/bin/kdesu" ]; then
-      ICON=$(get-app-theme-icon "$APP" 2>/dev/null)
-      kdesu -i "$ICON" -c "$CMD"
-    else
-      gksudo --message "$MSG" "$CMD"
-    fi
-  else
-    usage
-    exit 0
-  fi
+  pkexec usb-creator-pkexec $@
 else
   if [ $UID -ne 0 ]; then
     echo "Run as root."
