@@ -1,0 +1,3 @@
+#!/bin/bash
+
+python3 /usr/lib/usb-creator/main.py $@
