@@ -1,5 +1,6 @@
 usb-creator (0.4.5) solydxk; urgency=low
 
+  * Use pkexec for administrative privileges
   * Updated pt/fr translations
 
  -- Arjen Balfoort <arjenbalfoort@solydxk.com>  Thu, 08 Feb 2018 18:22:47 +0100
